modules/vpc/vpc.tf
resource "aws_vpc" "my-vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(var.common_tags, {
    Name = "${var.common_tags["environment"]}-${var.common_tags["project"]}-vpc"
  })
}
